--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tonikamitv.loginregister">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,8 +12,8 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".Login"
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +21,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Login"
-            android:label="@string/title_activity_login" />
+            android:name=".MainActivity"
+            android:label="@string/app_name" />
         <activity
             android:name=".Register"
             android:label="@string/title_activity_register" />
