--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 25 10:20:11 MST 2015
-sdk.dir=C\:\\Users\\tylweiss\\AppData\\Local\\Android\\Sdk
+#Sat Nov 28 11:16:05 MST 2015
+sdk.dir=/Users/cbilbo/Library/Android/sdk
