--- a/local.properties
+++ b/local.properties
@@ -7,10 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Sat Nov 28 11:16:05 MST 2015
-sdk.dir=/Users/cbilbo/Library/Android/sdk
-=======
-#Sat Nov 28 09:50:13 MST 2015
+#Sat Nov 28 15:51:28 MST 2015
+>>>>>>>=beaa2873431e1b2cca260a2cb4fb1daa0376eb41
 sdk.dir=C\:\\Users\\tylweiss\\AppData\\Local\\Android\\Sdk
->>>>>>> beaa2873431e1b2cca260a2cb4fb1daa0376eb41
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
