toast messages and clear message box when sent

--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 05 23:20:54 MST 2015
+#Mon Dec 07 10:47:41 MST 2015
 >>>>>>>=9e3a22841dc22a7979704df68a592c220da862c5
-sdk.dir=/Users/cbilbo/Library/Android/sdk
+sdk.dir=C\:\\Users\\tylweiss\\AppData\\Local\\Android\\Sdk
 =\=\=\=\=\=\=
 <<<<<<<=HEAD
