--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 11 21:44:26 MST 2015
+#Sat Jun 04 08:48:15 MST 2016
 >>>>>>>=9e3a22841dc22a7979704df68a592c220da862c5
-sdk.dir=/Users/cbilbo/Library/Android/sdk
+sdk.dir=C\:\\Users\\rec0nrat\\AppData\\Local\\Android\\Sdk
 =\=\=\=\=\=\=
 <<<<<<<=HEAD
