--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Aug 02 15:33:20 MST 2016
+#Tue Aug 09 13:32:55 MST 2016
 >>>>>>>=9e3a22841dc22a7979704df68a592c220da862c5
-sdk.dir=C\:\\Users\\rec0nrat\\AppData\\Local\\Android\\Sdk
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\cbilb\\AppData\\Local\\Android\\Sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
